--- a/style.css
+++ b/style.css
@@ -91,7 +91,7 @@ body{
     width: 100%;
     height: 909px;
 
-    background: url(/img/intro/background.png) no-repeat center;
+    background: url(img/intro/background.png) no-repeat center;
     background: cover;
 }
 
@@ -259,7 +259,7 @@ body{
     width: 100%;
     height: 1029px;
 
-    background: url(/img/aboutUs/background.png) no-repeat center;
+    background: url(img/aboutUs/background.png) no-repeat center;
     background: cover;
 }
 
